2008-02-18  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsjobenumerate.c (g_vfs_job_enumerate_add_info):
	Ensure we're using "/" as separator for uris.
	This only affects win32, which probably doesn't work atm, but
	still its nice to be explicit.
	
2008-02-18  Alexander Larsson  <alexl@redhat.com>

        * configure.ac:
	Detect gnome-keyring
	
        * common/gmountsource.[ch]:
	Add password out to ask_password
	
        * daemon/Makefile.am:
        * daemon/gvfskeyring.[ch]:
	Helper code for keyring support
	
        * daemon/gvfsbackendsftp.c:
	Add keyring support
	
        * daemon/gvfsbackenddav.c:
        * daemon/gvfsbackendsmb.c:
	Update to api changes

	This is the initial work on keyring support (#511517)
	Patch from Carlos Garcia Campos

2008-02-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	* daemon/gvfsbackendhttp.c: 
	* daemon/soup-input-stream.c:
	* daemon/soup-output-stream.c:
	Use SoupSessionSync instead of SoupSessionAsync and 
	convert SoupStreams and authentication logic.

2008-02-15  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsjobenumerate.c:
	Fix a little crasher (NULL terminate g_build_filename) that
	was introduced by the optional uri addition change to enumerate.

2008-02-15  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Completly redo Multistatus parsing.

2008-02-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Pass uri in query_info_async too.

2008-02-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Pass an optional uri to query_info and enumerate
	
        * daemon/gvfsbackend.[ch]:
	Add automatic info filling, implement thumbnail
	checking if uri passed in.
	
	* daemon/gvfsjobenumerate.[ch]:
        * daemon/gvfsjobqueryinfo.[ch]:
	Get optional uri argument.
	Call automatic backend info filling.

2008-02-15  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendhttp.c: (g_vfs_backend_uri_for_filename):