@@ -1,5 +1,10 @@
 2008-02-18  Alexander Larsson  <alexl@redhat.com>
 
+        * hal/ghalmount.c:
+	Cleanups of case insensitive search.
+
+2008-02-18  Alexander Larsson  <alexl@redhat.com>
+
 	* daemon/gvfsjobenumerate.c (g_vfs_job_enumerate_add_info):
 	Ensure we're using "/" as separator for uris.
 	This only affects win32, which probably doesn't work atm, but
